@@ -1,4 +1,4 @@
-use 5.10.0;
+use 5.10.1;
 use strict;
 use warnings;
 package App::Addex::AddressBook::AppleScript;
@@ -144,10 +144,22 @@ sub entries {
 sub _entrify {
   my ($self, $person) = @_;
 
+  my %fields;
+  if (my $note = $person->{note} // '') {
+    my @lines = grep { length } split /\R/, $note;
+    for my $line (@lines) {
+      warn("bogus line in notes: $line\n"), next
+        unless $line =~ /\A([^:]+):\s*(.+?)\Z/;
+      $fields{$1} = $2;
+    }
+  }
+
   my $fname   = $person->{'first name'}  // '';
   my $mname   = $person->{'middle name'}  // '';
   my $lname   = $person->{'last name'}  // '';
   my $suffix  = $person->{suffix} // '';
+
+  $mname = '' unless $fields{'use middle'} // 1;
 
   my $name = $fname
            . (length $mname  ? " $mname"  : '')
@@ -162,13 +174,6 @@ sub _entrify {
       address => $kv[ $i + 1 ],
       label   => $kv[ $i ],
     });
-  }
-
-  my %fields;
-  if (my $note = ($person->{note} // '')) {
-    while ($note =~ /^(\S+):\s*([^\x20\t]+)$/mg) {
-      $fields{$1} = $2;
-    }
   }
 
   my $arg = {
