@@ -1,6 +1,10 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          change how notes fields are processed
+
+          add a "use middle" field; if set and false, the person's middle name
+          is not used
 
 0.002     2010-12-07 09:08:02 America/New_York
           explicitly state perl 5.10 requirement
